Made text white to prevent glitch of invisible input (that sometimes occured for typed input).

--- a/Components/Pages/ColorSettings.razor.css
+++ b/Components/Pages/ColorSettings.razor.css
@@ -18,3 +18,12 @@
 .default-values-btn:hover {
     color: lightgray;
 }
+
+h1, h2, h3,
+h4, h5, h6 {
+    color: white;
+}
+
+label{
+    color:white;
+}
