--- a/Components/Reusable/SoloHSLControl.razor.css
+++ b/Components/Reusable/SoloHSLControl.razor.css
@@ -1,4 +1,13 @@
-﻿input[type='range'] {
+﻿h1, h2, h3,
+h4, h5, h6{
+    color:white;
+}
+
+label{
+    color:white;
+}
+
+input[type='range'] {
     accent-color: #0ea5e9;
 }
 
